# tpm-proxy

./: .gitignore  Makefile  README.md
Debug/: makefile
Debug/src/: subdir.mk
gadget/: CMakeLists.txt  Makefile  build.sh  install_only.sh  remove_only.sh  tpm-gadget.service  usb-tpm-host-drv.c
gadget/Debug/: makefile
gadget/Debug/src/: ptun.d  subdir.mk
gadget/src/: psock.c  psock.h  psock_proto.h  ptun.c  ptun.h  tpm_gadget_main.c  tpm_proxy.c  tpm_proxy.h  usbg_service.c  usbg_service.h  usbstring.c  xaprd_arm_main.c
gadget/utest/: test_run.sh  tpm2_getcap  tpm2_getrandom  tpm2_nvlist  tpm2_nvread  tpm2_startup
host/: Kbuild  Makefile  README.md  tpm-proxy-driver.c  tpmproxy-backports.c  tpmproxy-backports.h  tpmproxy-core.c
host/debian/: .gitignore  changelog  control  copyright  gbp.conf  rules  tpm-proxy-dkms.dkms  tpm-proxy-dkms.install
kernel/: Kbuild  Kconfig
src/: tpm_proxy.h  xaprd_arm_main.c
